Replace Language features not supported in Java 17: - getFirst() - addFirst() - removeLast()